tests/errors/e_tstring_unclosed4.pyx
# mode: error

t'{

_ERRORS = """
3:2: empty expression not allowed in t-string
# Message could be better possible
5:0: Expected '}', found 'None'
"""
